New Drawing machine from repl.it. Hopefully it functions

--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html lang="de">
-<head>
-<title>Some Fourier_stuff website of dodomat2504</title>
-<meta charset="utf-8">
-<script src="p5.js"></script>
-<script src="p5.dom.js"></script>
-</head>
-<body>
-<div id="wrapper">
-<h1>This is some fourier stuff :)</h1>
-<p>By dodomat2504</p>
-
-</div>
-
-<script src="scripts.js"></script>
-
-</body>
-
+<html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.1.9/p5.js"></script>
+    <script src="fourier.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+  </body>
 </html>
